--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
