--- a/websocket/package.json
+++ b/websocket/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "express": "^4.21.0",
+    "ws": "^8.18.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
