--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "websocket",
+  "name": "websocket-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "express": "^4.21.0",
-    "ws": "^8.18.0"
   },
   "keywords": [],
   "author": "",
